log/build_2025-03-12_15-14-39/week3/stdout_stderr.log
running egg_info
writing ../../build/week3/week3.egg-info/PKG-INFO
writing dependency_links to ../../build/week3/week3.egg-info/dependency_links.txt
writing entry points to ../../build/week3/week3.egg-info/entry_points.txt
writing requirements to ../../build/week3/week3.egg-info/requires.txt
writing top-level names to ../../build/week3/week3.egg-info/top_level.txt
reading manifest file '../../build/week3/week3.egg-info/SOURCES.txt'
writing manifest file '../../build/week3/week3.egg-info/SOURCES.txt'
running build
running build_py
copying week3/RRT_star_2.py -> /home/kisangpark/lab_training/build/week3/build/lib/week3
copying week3/pure_pursuit.py -> /home/kisangpark/lab_training/build/week3/build/lib/week3
copying week3/save_costmap.py -> /home/kisangpark/lab_training/build/week3/build/lib/week3
copying week3/rrt_debug.py -> /home/kisangpark/lab_training/build/week3/build/lib/week3
copying week3/__init__.py -> /home/kisangpark/lab_training/build/week3/build/lib/week3
copying week3/RRT_star.py -> /home/kisangpark/lab_training/build/week3/build/lib/week3
running install
running install_lib
copying /home/kisangpark/lab_training/build/week3/build/lib/week3/rrt_debug.py -> /home/kisangpark/lab_training/install/week3/lib/python3.10/site-packages/week3
byte-compiling /home/kisangpark/lab_training/install/week3/lib/python3.10/site-packages/week3/rrt_debug.py to rrt_debug.cpython-310.pyc
  File "/home/kisangpark/lab_training/install/week3/lib/python3.10/site-packages/week3/rrt_debug.py", line 221
    cv2.line(rgb_img, new_node.point, nearest.point, (,255,0), 2)
                                                      ^
SyntaxError: invalid syntax

running install_data
copying resource/week3 -> /home/kisangpark/lab_training/install/week3/share/ament_index/resource_index/packages
copying package.xml -> /home/kisangpark/lab_training/install/week3/share/week3
copying launch/turtlebot.launch.py -> /home/kisangpark/lab_training/install/week3/share/week3/launch
running install_egg_info
removing '/home/kisangpark/lab_training/install/week3/lib/python3.10/site-packages/week3-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/week3/week3.egg-info to /home/kisangpark/lab_training/install/week3/lib/python3.10/site-packages/week3-0.0.0-py3.10.egg-info
running install_scripts
Installing pure_pursuit script to /home/kisangpark/lab_training/install/week3/lib/week3
Installing rrt_debug script to /home/kisangpark/lab_training/install/week3/lib/week3
Installing rrt_star script to /home/kisangpark/lab_training/install/week3/lib/week3
Installing rrt_star_2 script to /home/kisangpark/lab_training/install/week3/lib/week3
Installing save_costmap script to /home/kisangpark/lab_training/install/week3/lib/week3
writing list of installed files to '/home/kisangpark/lab_training/build/week3/install.log'
